# bpmn-builder

./: README.md  docker-compose.yml  graph.py  rag_integration.py  requirements.txt
FROM_TEXT_TO_JSON/: chat.py  example_texts.txt.py  main.py  works_good.py
backend/: .dockerignore  Dockerfile  Makefile  docker-compose.yml  pyproject.toml  requirements.txt
backend/src/: audio_to_text.py  main.py
backend/src/domain/interfaces/repositories/: voice_repositories.py
backend/src/domain/usecases/: voice_usecase.py
backend/src/infrastructure/database/repositories/: voice.py
backend/src/infrastructure/object_storage/repositories/: voice.py
backend/src/presentation/api/: main.py
backend/src/presentation/api/controllers/: main.py  voice_controller.py
backend/src/presentation/api/middlewares/: main.py
backend/src/presentation/api/providers/: main.py
backend/src/routes/: main.py
backend/src/services/: base.py  bpmn_generation.py  speech_recognition.py
backend/src/utils/: __init__.py  get_examples.py  get_template.py
backend/tests/: services.py
frontend/: .gitignore  Dockerfile  package.json  webpack.config.js
frontend/src/: App.js  index.css  index.js
frontend/src/api/: voiceTextApi.js
frontend/src/store/: diagrammSlice.js  store.js  voiceTextSlice.js
langgraph/: main.py  main_test.py
langgraph/nodes/: parser_node.py
langgraph/rag/: index.py
langgraph/rag_data/: samples.json
langgraph/utils/: extract_pdf_text.py
nodes/: json_generator_node.py
test/: package-lock.json
utils/: rag_integration.py  search.py  split_text.py  vector_db.py
(+11 files in other folders)
