[project]
name = "bpmn-builder"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]>=0.115.8",
    "minio>=7.2.15",
]

[dependency-groups]
dev = [
    "black>=25.1.0",
    "mypy>=1.15.0",
    "pytest>=8.3.4",
    "pytest-coverage>=0.0",
    "pyright>=1.1.394",
    "ruff>=0.9.7",
]

[tool.mypy]
disable_error_code = ["import-untyped"]

[tool.black]
line-length = 79
